# superdistricts

./: Cargo.toml  build.rs
cache/: frc1  frc100  frc1002  frc101  frc1011  frc1014  frc1018  frc102  frc1023  frc1024  frc1025  frc1027  frc103  frc1038  frc1051  frc1056  frc1058  frc1065  frc107  frc1071  frc1072  frc1073  frc1075  frc1076  frc108  frc1086  frc1089  frc1091  frc1099  frc11  frc1100  frc1102  frc1108  frc111  frc1111  frc1114  frc1123  frc1124  frc1126  frc1138  (+3700 more)
src/: cluster.rs  geo.rs  main.rs  tba.rs
src/protos/: Team.proto  Team.rs  mod.rs
