[package]
name = "superdistricts"
version = "0.1.0"
authors = ["Justin Tervay <justin@tervay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
protobuf = { version = "2", features = ["with-bytes"] }
geocoding = "0.3.0"

[build-dependencies]
protobuf-codegen-pure = "2.3"